# op-remote-ui

./: CPP_TEST_GUIDE.md  CPP_TEST_RESULTS.md  README.md  README_OPTIMIZED.md  TEST_GUIDE.md  frame_streamer.cc  frame_streamer.h  frame_streamer.py  main.cc  main_optimized.cc  remote_ui.py  requirements.txt  stream_server.py  stream_server_fixed.py  touch_injector.cc  touch_injector.py
test/: Dockerfile  benchmark.py  docker-compose.yml  integration_test.py  mock_ui_simulator.py  requirements-test.txt  run_tests.sh  test_realtime.py  test_shared_memory.py
test/cpp/: CMakeLists.txt  build.sh  integration_test.py  mock_openpilot.h  mock_openpilot_fixed.h  simple_ui_test.cc  test_main.cc  test_main_fixed.cc  test_main_visual.cc  unit_tests.cc
